<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
android:background="@drawable/ombreshape">


<!-- Cadre Textes -->
<LinearLayout
    android:id="@+id/cadre1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="8dp"
    android:paddingBottom="24dp"
    android:layout_marginTop="4dp"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/metalliqueshape" >

    <!-- Installation -->

    <!-- Note explicative 2 -->
    <TextView
        android:id="@+id/intitule"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        android:text="@string/installDant"
        android:textColor="#404040"
        android:textSize="27sp" />

    <TextView
        android:id="@+id/install_note2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="4dp"
        android:text="@string/install_note2"
        android:textColor="#000000"
        android:textSize="24sp" />

    <!-- [INPUTS] -->

    <EditText
        android:id="@+id/input_nom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input1A"
        android:textSize="24sp"
        android:importantForAutofill="no"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/input_partner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nomAide"
        android:textSize="24sp"
        android:importantForAutofill="no"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/input_telephone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input2A"
        android:inputType="phone"
        android:textSize="24sp"
        android:importantForAutofill="no" />

</LinearLayout>

<!-- Cadre Boutons -->
<LinearLayout
    android:id="@+id/cadre2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingLeft="36dp"
    android:paddingRight="36dp"
    android:paddingTop="9dp"
    android:paddingBottom="9dp"
    android:layout_marginTop="16dp"
    android:background="@drawable/metalliqueshape"
    app:layout_constraintTop_toBottomOf="@id/cadre1"
    android:layout_below="@id/cadre1" >

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:orientation="horizontal"
        android:weightSum="1.0" >

        <Button
            android:id="@+id/btn_previous"
            android:layout_height="wrap_content"
            android:minHeight="48sp"
            android:layout_weight=".4"
            android:layout_width="0dp"
            android:orientation="vertical"
            android:text="@string/btn_previous"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textAllCaps="false"
            android:background="@drawable/boutonsshape"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="8dp"
            android:shadowColor="#000000"
            android:shadowRadius="5"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btn_continue"
            android:layout_height="wrap_content"
            android:minHeight="48sp"
            android:layout_weight=".6"
            android:layout_width="0dp"
            android:orientation="vertical"
            android:text="@string/btn_continue"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textAllCaps="false"
            android:background="@drawable/boutonsshape"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="8dp"
            android:shadowColor="#000000"
            android:shadowRadius="5"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>

</LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>