<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/ombreshape">

    <TextView
        android:id="@+id/textScan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/installScan"
        android:textSize="27sp"
        android:background="@drawable/metalliqueshape"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:orientation="vertical"
        android:textColor="#404040"/>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.budiyev.android.codescanner.CodeScannerView
            android:id="@+id/qr_scanner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </FrameLayout>
</LinearLayout>
