...
            android:layout_marginRight="12dp"
            android:orientation="vertical"
            android:background="#404040"
            android:alpha="0.1" />

        <TextView
            android:id="@+id/textQR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/installQR"
            android:textSize="27sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
...
