...
            android:layout_marginEnd="30dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:layout_gravity="center" >

            <Button
                android:id="@+id/btn_qrcode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="60sp"
                android:orientation="vertical"
                android:text="@string/afficher_qr_code"
                android:textAllCaps="false"
...
