...
    <string name="btn_previous">Retour</string>
    <string name="btn_continue">Continuer</string>
    <string name="btn_terminer">Terminer</string>
    <string name="btn_valider">Valider</string>
    <string name="btn_annuler">Annuler</string>
    <string name="btn_sauver">Sauver</string>
    <string name="btn_sms_va_dant">Envoyer SMS: Tout va bien ?</string>
    <string name="btn_sms_va_de">Envoyer SMS: Tout va bien.</string>
    <string name="btn_appel">Appeler §%</string>
    <string name="btn_urgence">Vérifier la situation §%</string>
    <string name="btn_tiers">Envoyer les info par mail à …</string>
    <string name="btn_reinit_1">Réinitialiser SmallBrother</string>
    <string name="btn_switch">Mode Privé </string>
...
